Profile in navbar

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /public/storage
 /storage/*.key
 /vendor
+!/vendor/jeroennoten/laravel-adminlte/resources/views/partials/navbar/menu-item-dropdown-user-menu.blade.php
 .env
 .env.backup
 .phpunit.result.cache
