--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+# Usar tu propia URL de ngrok para el modo de pruebas con OpenPay
 #APP_URL=https://ventless-unentrenched-kati.ngrok-free.dev
 #ASSET_URL=https://ventless-unentrenched-kati.ngrok-free.dev
 
